--- a/ClientApp/src/components/css/BrandHeader.css
+++ b/ClientApp/src/components/css/BrandHeader.css
@@ -27,3 +27,22 @@
 	color: #707070 !important;
 	border-color: #707070 !important;
 }
+
+@media (max-width: 768px) {
+	.brand-header {
+		text-align: center;
+		height:160px;
+	}
+	.link {
+		width: 100%;
+		display: block;
+	}
+	.link-container {
+		float:none;
+
+	}
+	.link.middle {
+		border-right: none !important;
+		border-left: none !important;
+	}
+}
