--- a/ClientApp/src/components/css/FiltersTab.css
+++ b/ClientApp/src/components/css/FiltersTab.css
@@ -23,3 +23,13 @@
 	top: 45px;
 	left: 45%;
 }
+
+@media (max-width: 768px) {
+	.filter-item {
+		font-size:14px;
+		padding:10px;
+	}
+		.filter-item.selected::before {
+			display: none;
+		}
+}
