--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -26,12 +26,16 @@ code {
 .main-container {
 	width: 100vw;
 	height: 100vh;
-	display: flex;
 }
 
-.align-center {
-	justify-content: center;
-}
+	.main-container > .row {
+		width: 100vw;
+		height: 100vh;
+	}
+
+	.align-center {
+		justify-content: center;
+	}
 
 .page-container {
 	width: 100vw;
