--- a/ClientApp/src/components/css/Contributor.css
+++ b/ClientApp/src/components/css/Contributor.css
@@ -17,3 +17,11 @@
 	left: 60px;
 	top: 10px;
 }
+
+.contributor.light .contributor-name {
+	display: none;
+}
+
+.contributor.light .contributor-photo {
+	border: 2px solid white;
+}
