--- a/ClientApp/src/components/css/ToursCarousel.css
+++ b/ClientApp/src/components/css/ToursCarousel.css
@@ -12,8 +12,9 @@
 	color: white;
 	position: relative;
 	cursor: pointer;
-	background-size: auto 100%;
+	background-size: 100% auto;
 	background-repeat: no-repeat;
+	background-position: center;
 }
 
 .tour-item > .tour-title {
