--- a/ClientApp/src/components/css/ToursCarousel.css
+++ b/ClientApp/src/components/css/ToursCarousel.css
@@ -12,7 +12,7 @@
 	color: white;
 	position: relative;
 	cursor: pointer;
-	background-size: 100% auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 }
