--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -5,11 +5,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - romeyouup</title>
-    <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/Identity/css/site.css" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - romeyouup</title>
+	<link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/Identity/css/site.css" />
+	<meta name="description" content="Roma, come non l'hai mai vista!" />
+	<meta name="og:title" content="romeyouup" />
+	<meta name="og:description" content="Roma, come non l'hai mai vista!" />
+	<meta name="og:image" content="https://romeyouup.it/static/media/card.b3cb07f3.jpg" />
+	<meta name="og:url" content="https://romeyouup.it/" />
+	<meta name="og:type" content="website" />
+	<meta name="fb:app_id" content="815947062330614" />
 </head>
 <body>
     <header>
