--- a/ClientApp/src/components/css/ToursList.css
+++ b/ClientApp/src/components/css/ToursList.css
@@ -8,3 +8,16 @@
 	padding: 5px;
 	margin-bottom: 20px;
 }
+
+.tours-list {
+	text-align: center;
+}
+
+@media (max-width: 768px) {
+	.tours-list {
+		margin-top:0 !important;
+	}
+	.tours-list .tour-item {
+		width:100%;
+	}
+}
