--- a/ClientApp/src/components/css/BrandHeader.css
+++ b/ClientApp/src/components/css/BrandHeader.css
@@ -3,14 +3,6 @@
 	src: local('Leelawadee'), url(../../assets/fonts/Leelawadee/leelawadee.ttf) format('truetype');
 }
 
-.hamburger-menu-icon {
-	background-image: url(../../assets/images/hamburger.svg);
-	background-size: 20px 20px;
-	width: 30px;
-	height: 30px;
-	background-repeat: no-repeat;
-}
-
 .brand-header {
 	padding: 20px;
 	height: 90px;
@@ -47,21 +39,48 @@
 	height: 48px;
 }
 
-@media (max-width: 768px) {
+@media(min-width: 950px) {
+	.hamburger-menu{
+		display: none;
+	}
+}
+
+@media (max-width: 950px) {
 	.brand-header {
 		text-align: center;
-		height:160px;
+		height:60px;
 	}
 	.link {
-		width: 100%;
-		display: block;
+		display: none;
 	}
-	.link-container {
-		float:none;
-
+	.bm-burger-button {
+		top:30px !important;
+		left:30px !important; 
 	}
-	.link.middle {
-		border-right: none !important;
-		border-left: none !important;
+	.bm-burger-bars {
+		background-color: #a5a5a5 !important;
+		height: 15% !important;
+	}
+	.header-logo {
+		height: 40px;
+		margin-top: 4px;
+		margin-left: 50px;
+	}
+	.burger-link {
+		display: block !important;
+		color: white;
+		font-size: 24px;
+		margin-bottom: 20px;
+	}
+	.hamburger-ryu-logo {
+		margin-left: 0;
+		margin-bottom: 40px;
+	}
+	.bm-menu .languagePopover {
+		display: block !important;
+		background-color: transparent;
+		border: none;
+		padding-left: 0;
+		margin-left: 0;
 	}
 }
