--- a/ClientApp/src/components/css/CardsCarousel.css
+++ b/ClientApp/src/components/css/CardsCarousel.css
@@ -11,7 +11,7 @@
 	color: white;
 	position: relative;
 	cursor: pointer;
-	background-size: auto 100%;
+	background-size: cover;
 	background-repeat: no-repeat;
 }
 
@@ -29,7 +29,7 @@
 
 	.post-item > .overlay {
 		width: 100%;
-		background-image: linear-gradient(to top,#333, rgba(255,0,0,0));
+		background-image: linear-gradient(to top,#333, rgba(255, 255, 255, 0));
 		height: 180px;
 		position: absolute;
 		bottom: 0;
