--- a/ClientApp/src/components/css/Contributor.css
+++ b/ClientApp/src/components/css/Contributor.css
@@ -51,7 +51,7 @@
 .contributor-background {
 	text-align: center;
 	background-image: url(../../assets/images/background2.jpg);
-	background-size: 100% auto;
+	background-size: cover;
 	position: absolute;
 	top: 90px;
 	left: 0;
@@ -59,8 +59,8 @@
 	bottom: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 950px) {
 	.contributor-background {
-		top: 160px;
+		top: 80px;
 	}
 }
