--- a/ClientApp/src/components/css/Panel.css
+++ b/ClientApp/src/components/css/Panel.css
@@ -1,6 +1,6 @@
 ﻿.panel {
 	background-image: url("../../assets/images/card.jpg");
-	background-size: 100%;
+	background-size: cover;
 	border-radius: 0 30px 30px 0;
 	position: relative;
 }
