--- a/ClientApp/src/components/css/Footer.css
+++ b/ClientApp/src/components/css/Footer.css
@@ -7,8 +7,7 @@
 	text-align: center;
 	padding: 10px;
 	background: rgba(0,0,0,0.5);
-	border-radius: 10px;
-	margin-right: 10px;
+	width:100%;
 }
 
 	.social-buttons h5 {
