--- a/ClientApp/src/components/css/LateralCard.css
+++ b/ClientApp/src/components/css/LateralCard.css
@@ -15,11 +15,6 @@
 
 @media (max-width: 950px) {
 	h2 {
-		color: white !important;
-		padding: 20px;
-		background: #707070;
-		border-radius: 10px;
-		margin-right: 10px;
-		font-size: 24px;
+		display:none;
 	}
 }
