--- a/ClientApp/src/components/css/ToursCarousel.css
+++ b/ClientApp/src/components/css/ToursCarousel.css
@@ -68,11 +68,11 @@
 		top: 25%;
 		left: 22%;
 	}
-	.tour-item .modality.modality-walk {
+	.modality.modality-walk {
 		background-image: url(../../assets/icons/walking.svg);
 	}
 
-	.tour-item .modality.modality-bike {
+	.modality.modality-bike {
 		background-image: url(../../assets/icons/bike.svg);
 	}
 
@@ -90,12 +90,12 @@
 		padding: 10px;
 	}
 
-	.tour-item .type.type-experience {
+	.type.type-experience {
 		background-image: url(../../assets/icons/experience.svg);
 	}
-	.tour-item .type.type-walking {
+	 .type.type-walking {
 		background-image: url(../../assets/icons/foot.svg);
 	}
-	.tour-item .type.type-museums {
+	 .type.type-museums {
 		background-image: url(../../assets/icons/museums.svg);
 	}
