--- a/ClientApp/src/components/css/BrandHeader.css
+++ b/ClientApp/src/components/css/BrandHeader.css
@@ -8,6 +8,14 @@
 	height: 90px;
 }
 
+.brand-header.home {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 99;
+}
+
 .link-container {
 	float: right;
 	margin-top: 10px;
